objects/BMCServiceDesk__BMC_ProtocolEndPoint__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProtocolType__c</fullName>
        <label>Protocol Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPv4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPv6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppleTalk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DECnet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VINES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame Relay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethernet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TokenRing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibre Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISDN BRI Endpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISDN B Channel Endpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISDN D Channel Endpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPv4/v6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSPF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>